[package]
name = "verder-helpen-comm-test"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verder-helpen-proto = { git = "https://github.com/verder-helpen/verder-helpen-proto.git" }
verder-helpen-jwt = { git = "https://github.com/verder-helpen/verder-helpen-jwt.git" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0.81"
serde_yaml = "0.9.13"
josekit = "0.8.0"
